--- a/Sorts/Sorts.csproj
+++ b/Sorts/Sorts.csproj
@@ -47,6 +47,8 @@
     <Compile Include="InsertSort.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuickSort.cs" />
+    <Compile Include="SelectionSort.cs" />
+    <Compile Include="ShellSort.cs" />
     <Compile Include="SortBase.cs" />
   </ItemGroup>
   <ItemGroup>
