--- a/Sorts/Sorts.csproj
+++ b/Sorts/Sorts.csproj
@@ -46,6 +46,7 @@
     <Compile Include="BubbleSort.cs" />
     <Compile Include="HeapSort.cs" />
     <Compile Include="InsertSort.cs" />
+    <Compile Include="MergeSort.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuickSort.cs" />
     <Compile Include="SelectionSort.cs" />
